tests/rosetta/transpiler/Zig/bitmap-histogram.error
zig build: exit status 1
/tmp/bitmap-histogram.zig:48:17: error: local variable is never mutated
/tmp/bitmap-histogram.zig:48:17: note: consider using 'const'
/tmp/bitmap-histogram.zig:47:17: error: local variable is never mutated
/tmp/bitmap-histogram.zig:47:17: note: consider using 'const'
/tmp/bitmap-histogram.zig:44:13: error: local variable is never mutated
/tmp/bitmap-histogram.zig:44:13: note: consider using 'const'
/tmp/bitmap-histogram.zig:78:13: error: local variable is never mutated
/tmp/bitmap-histogram.zig:78:13: note: consider using 'const'
/tmp/bitmap-histogram.zig:98:13: error: local variable is never mutated
/tmp/bitmap-histogram.zig:98:13: note: consider using 'const'
